# scope_plugins

./: README.md  pyproject.toml
scope-story-sequencer/: README.md
scope-story-sequencer/src/scope_story_sequencer/: pipeline.py  schema.py
src/scope_story_sequencer/: __init__.py
